# python-minecraft-mods-sync

./: .gitignore  README.md  main.py  main_gui.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
src/gui/: DualStream.py  EmittingStream.py  MainWindow.py  MainWindow.ui  SyncWorker.py
src/mcmods_sync/: ProgressManager.py  config.py  core.py  files.py  server.py
