[project]
name = "python-minecraft-mods-sync"
version = "0.1.0"
description = ""
authors = [
    {name = "Yuan Chiu",email = "chyuaner@gmail.com"}
]
packages = [{ include = "mcmods_sync", from = "src" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
